feat: add basic crud operations
