# user/service.go
@@ -1,7 +1,9 @@
 package user
 
 import (
+	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
@@ -22,6 +24,46 @@ func CreateUser(c echo.Context) error {
 	seq += 1
 
 	return c.JSON(http.StatusCreated, user)
+}
+
+func GetUser(c echo.Context) error {
+	lock.Lock()
+	defer lock.Unlock()
+
+	id, _ := strconv.Atoi(c.Param("id"))
+
+	return c.JSON(http.StatusOK, users[id])
+}
+
+func UpdateUser(c echo.Context) error {
+	lock.Lock()
+	defer lock.Unlock()
+
+	id, _ := strconv.Atoi(c.Param("id"))
+	if users[id] == nil {
+		return fmt.Errorf("user of id %v was not found", id)
+	}
+
+	u := &User{}
+	if err := c.Bind(u); err != nil {
+		return err
+	}
+
+	users[id].Age = u.Age
+	users[id].Email = u.Email
+	users[id].Name = u.Name
+
+	return c.JSON(http.StatusOK, users[id])
+}
+
+func DeleteUser(c echo.Context) error {
+	lock.Lock()
+	defer lock.Unlock()
+
+	id, _ := strconv.Atoi(c.Param("id"))
+	delete(users, id)
+
+	return c.NoContent(http.StatusNoContent)
 }
 
 func GetAllUsers(c echo.Context) error {
